GlooGateway/external-ngrok-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-gateway-tunnel
  namespace: gloo-system
spec:
  ingressClassName: ngrok
  rules:
    - host: ezequiel-thirstless-johnnie.ngrok-free.dev  # replace with your ngrok domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-gateway-proxy
                port:
                  number: 80
